<resources>
    <string name="app_name">NovenApp</string>
    <string name="titulo_todos_dias">Oração para todos os dias</string>
    <string name="titulo_final">Oração Final</string>
    <string name="sj_titulo_dia1">1º Dia - São José, o grande instrumento da Providência Diniva na Família de Nazaré</string>
    <string name="sj_titulo_dia2">2º dia – São José, o grande instrumento da Providência Divina na vida da Igreja</string>
    <string name="sj_titulo_dia3">3º dia – São José, Patrono de toda a Obra Shalom</string>
    <string name="sj_titulo_dia4">4º dia – São José, auxílio e socorro na implantação da Paz no mundo</string>
    <string name="sj_titulo_dia5">5º dia – São José, construtor dos espaços sagrados</string>
    <string name="sj_titulo_dia6">6º dia – São José, mantenedor do culto divino</string>
    <string name="sj_titulo_dia7">7º dia – São José, modelo de abandono nas mãos de Deus</string>
    <string name="sj_titulo_dia8">8º dia – São José, educador na vivência da sobriedade</string>
    <string name="sj_titulo_dia9">9º dia – São José, ícone do espírito de pobreza</string>
    <string name="sj_oracao_todos_dias">Amado São José, vós que fostes instrumento da Providência Divina na Família de Nazaré, na Igreja e para com vossos irmãos, fixai nossos olhos nas coisas que não passam e dai-nos a graça de ordenar nossas vidas para os tesouros do céu. Amém! (em seguida, reza-se um Pai-nosso, uma Ave Maria, um Glória)</string>
    <string name="sj_oracao_dia1">São José, servo da Caridade, que acolhestes com fé e coragem confiante a missão de ser instrumento da Divina Providência para com Jesus e Maria, aumentai em nós a fé, a coragem e a confiança em Deus para, também nós, sermos instrumentos da Providência, como é da vontade de Deus desde a criação do mundo.</string>
    <string name="sj_oracao_dia2">São José, servo fiel e prudente, que sois Patrono da Igreja Católica no mundo inteiro, protegendo e sendo instrumento da Divina Providência para Jesus, seu Divino Fundador e para Maria, seu Modelo mais perfeito, dai-nos a graça de, também nós, apesar do nosso pecado e indignidade, termos o privilégio de ser instrumentos da Providência de Deus na Igreja do vosso Filho Jesus.</string>
    <string name="sj_oracao_dia3">São José, humílimo servo do Senhor, que sois instrumento da Providência Divina para a Obra Shalom, sede nossa inspiração e modelo para que, esquecidos de nós mesmos, sirvamos a Deus e sejamos mediadores de Sua Providência para a evangelização através da Obra que nos foi confiada.</string>
    <string name="sj_oracao_dia4">São José, servo dulcíssimo, que educaste com exemplo, doçura e firmeza o Filho de Deus a vós confiado, ensinando-lhe o valor do trabalho como meio de partilha e vendo-o crescer em graça e sabedoria para a implantação de Sua Paz no mundo, auxilia-nos com os meios necessários para a educação dos nossos filhos e a formação dos que evangelizamos para que sejam, também eles, alegres testemunhas do Ressuscitado que passou pela cruz.</string>
    <string name="sj_oracao_dia5">São José, servo e trabalhador diligente, que construístes para Jesus e Maria o lar em que reinaram com perfeição a caridade e a alegria, ajudai-nos a construir em nossos lares e na Obra espaços sagrados dignos da presença viva do vosso amado Jesus.</string>
    <string name="sj_oracao_dia6">São José, servo piedoso, que tivestes para com Jesus e Maria permanente postura de oração, veneração, proteção e cuidado, servindo juntamente com Maria Àquele que adoráveis, fazei de nós instrumentos da Divina Providência para que nunca se extinga ou se empobreça em beleza, brilho, dignidade e piedade o culto divino em meio a nós.</string>
    <string name="sj_oracao_dia7">São José, servo confiante, que não temestes tomar sob vossa proteção e sustento a Maria e Jesus e, abandonado às mãos do Deus das Providências os servistes durante toda vossa vida sem reter para vós nada do fruto do vosso trabalho, ensinai-nos a acolher a graça do completo abandono nas mãos do Pai que cuida de nós muito melhor do que nós mesmos.</string>
    <string name="sj_oracao_dia8">São José, servo sóbrio e justo, que nunca considerastes como vosso o que vos poderia ser supérfluo, mas, longe disso, soubestes partilhar além do supérfluo, aquilo que Jesus, Maria e vossos irmãos necessitavam, ensinai-nos que o supérfluo não nos pertence, assim como, por direito de caridade, deixa de nos pertencer aquilo de que nosso irmão precisa.</string>
    <string name="sj_oracao_dia9">São José, servo pobre do Senhor, que entendestes ser a partilha original a mesma partilha da Trindade para conosco, e que, em Jesus Cristo, vos deixastes moldar pelo espírito de partilha e comunhão que antecederam o pecado original, concedei-nos, pelo poder do vosso Filho, a graça de honrar nosso Batismo com a conversão à partilha e comunhão das origens, agora elevada a caridade pelos méritos de Cristo.</string>
    <string name="sj_oracao_final">Glorioso São José, que fostes modelo de vivência da pobreza, da sobriedade, de instrumento da Divina Providência; vós que não detivestes para vós mesmo nenhum bem material ou espiritual, destinando-os sempre às necessidades de Jesus, de Maria e dos vossos irmãos; vós que, por graça divina, vistes restaurada em vós a vocação original do homem à caridade, trabalho, partilha e comunhão; vós que, inspirado pelo Espírito Santo, acolhestes a nova economia do Reino do vosso Filho Jesus, intercedei para que acolhamos o mesmo convite que vos fez o Pai de ser instrumentos de Sua Paz, de Sua Providência, de Sua Caridade, de Sua Pobreza para o homem de hoje. Amém.</string>
    <string name="sr_oracao_todos_dias">Oh! Glorioso Arcanjo São Rafael, que estais presente ante o trono do Altíssimo. Eu, vosso indigno devoto, me humilho em vossa presença. Conhecendo por uma parte minha indignidade, e por outra vossa ardente caridade, vos suplico do íntimo do coração, que digneis escutar os meus humildes rogos e apresente-os ante o Senhor para obter por vossa mediação os favores que solicito nesta novena. Mas se minha súplica não há de contribuir para maior glória de Deus e salvação da minha alma, rogo-vos, oh! Meu Celestial protetor, mostrai a graça que me há de conduzir com mais segurança à eterna salvação. Não olheis tanto para os meus desejos, quanto ao bem de minha alma. Cheio de inteira confiança em Vós; espero alcançar o que solicito pelos méritos de Nosso Senhor Jesus Cristo, que vive e reina com o Pai e o Espírito Santo pelos séculos dos séculos. Amém. \n \nPedir as graças que se desejam.</string>
    <string name="sr_invocacao">Invocação</string>
    <string name="sr_oracao_invocacao">Oh! Glorioso Arcanjo São Rafael, lembra-te de seus devotos, em todas as partes e sempre peça por nós, ao Filho de Deus. (Rezar nove vezes Glória ao pai, em honra dos nove coros angélicos).</string>
    <string name="dm_titulo_dia1">1º dia - humanidade inteira, especialmente todos os pecadores</string>
    <string name="dm_oracao_dia1">“Hoje, traze-me a humanidade inteira, especialmente todos os pecadores, e mergulha-os no oceano da minha Misericórdia. Com isso, vais consolar-me na amarga tristeza em que me afunda a perda das almas.”
\n\nMisericordiosíssimo Jesus, de quem é próprio ter compaixão de nós e nos perdoar, não olheis os nossos pecados, mas a confiança que depositamos em Vossa infinita bondade. Acolhei-nos na mansão do Vosso compassivo coração e nunca nos deixeis sair dele. Nós Vo-lo pedimos pelo amor que Vos une ao Pai e ao Espírito Santo.
\n\nEterno Pai, olhai com misericórdia para toda humanidade, encerrada no coração compassivo de Jesus, mas especialmente para os pobres pecadores. Pela Sua dolorosa Paixão, mostrai-nos a Vossa Misericórdia, para que glorifiquemos Sua onipotência por toda a eternidade. Amém.</string>
    <string name="dm_final">Terço da Misericórdia</string>
    <string name="terco_da_misericordia">Inicie rezando:
\nEm nome do Pai, do Filho e do Espírito Santo. Amém

\nPai-Nosso…

\nAve-Maria…

\nCreio…
\n
\nNas contas do Pai-Nosso, reza-se:
\nEterno Pai, eu Vos ofereço o Corpo e Sangue, a Alma e Divindade de Vosso diletíssimo Filho, Nosso Senhor Jesus Cristo, em expiação dos nossos pecados e do mundo inteiro.
\n
\nNas contas das Ave-Marias, reza-se:
\nPela Sua dolorosa Paixão, tende misericórdia de nós e do mundo inteiro. (10 vezes)
\n
\nAo final de cada mistério rezar:
\nÓ Sangue e Água que jorrastes do Coração de Jesus, como fonte de misericórdia para nós, eu confio em Vós.
\n
\nAo fim do terço, reza-se (3 vezes)
\nDeus Santo, Deus Forte, Deus Imortal, tende piedade de nós e do mundo inteiro.</string>
</resources>